# AudioIO

./: .gitignore  README.md
app/: build.gradle
app/src/androidTest/java/com/alan/audioio/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/piano/: A.m4a  B.m4a  C.m4a  D.m4a  E.m4a
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/audio_io/: AudioIOStream.cpp  AudioIOStream.h
app/src/main/cpp/common/: Log.h
app/src/main/cpp/jni/: AudioIOJNI.cpp  JNIHelper.cpp  JNIHelper.h  JNIOnLoad.cpp
app/src/main/java/com/alan/audioio/: MainActivity.java
app/src/main/java/com/alan/audioio/app/: MainActivity.java  TestRecordToWavActivity.java  TestSoundPoolActivity.java
app/src/main/java/com/alan/audioio/app/ui/: PianoKeyItemView.java  TestPlayWavActivity.java
app/src/main/java/com/alan/audioio/audio/: AndroidSoundPool.java  AudioIOStream.java  AudioPlayer.java  AudioRecorder.java  IAudioIO.java  WavFile.java
app/src/main/java/com/alan/audioio/audio/common/: APPContext.java  AudioConstants.java  AudioIOBuilder.java  IByteBufferCallback.java  IDataAvailableListener.java  Type.java  (+1 more)
app/src/main/java/com/alan/audioio/utils/: ALog.java  Logger.java  RuntimePermissionsManager.java
app/src/main/res/drawable/: btn_start_bg.xml
app/src/main/res/layout/: activity_common_test.xml  activity_main.xml  activity_sound_pool.xml  piano_key_item_layout.xml
app/src/main/res/values/: attrs.xml  colors.xml  strings.xml
app/src/test/java/com/alan/audioio/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
(+1 files in other folders)
